--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Example</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <p>This is an example of a simple HTML page with one paragraph. New test</p>
