website-dev: Development first version

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,225 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Example</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <p>This is an example of a simple HTML page with one paragraph. New test</p>
-    </body>
+<html data-wf-page="66e299f9f99abe81c7de4abb" data-wf-site="66e299f9f99abe81c7de4ab5" data-wf-status="1">
+  <head>
+    <meta charset="utf-8" />
+    <title>ThirteenTech</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous" />
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      WebFont.load({
+        google: {
+          families: ["Lato:100,100italic,300,300italic,400,400italic,700,700italic,900,900italic", "Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]
+        }
+      });
+    </script>
+    <script type="text/javascript">
+      ! function(o, c) {
+        var n = c.documentElement,
+          t = " w-mod-";
+        n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+      }(window, document);
+    </script>
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
+    <link href="images/app-icon.png" rel="apple-touch-icon" />
+  </head>
+  <body>
+    <div class="navbar-no-shadow">
+      <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar-no-shadow-container w-nav">
+        <div class="container-regular">
+          <div class="navbar-wrapper">
+            <a href="#" class="navbar-brand w-nav-brand">
+              <img src="images/thirteentech-201.png" loading="lazy" width="59" alt="" />
+            </a>
+            <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
+              <ul role="list" class="nav-menu-2 w-list-unstyled">
+                <li>
+                  <a href="#about_us" class="nav-link lato-16">About Us</a>
+                </li>
+                <li>
+                  <a href="#services" class="nav-link lato-16">Services</a>
+                </li>
+                <li>
+                  <a href="#process" class="nav-link lato-16">Process</a>
+                </li>
+                <li>
+                  <a href="#technologies" class="nav-link lato-16">Technologies</a>
+                </li>
+                <li class="mobile-margin-top-10">
+                  <div class="nav-button-wrapper">
+                    <a href="mailto:thirteentech.business@gmail.com?subject=Request%20for%20IT%20Services%20%E2%80%93%20ThirteenTech" class="button-primary w-button">Contact Us</a>
+                  </div>
+                </li>
+              </ul>
+            </nav>
+            <div class="menu-button w-nav-button">
+              <div class="w-icon-nav-menu"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section id="hero" class="hero-without-image">
+      <div class="container-2">
+        <div class="hero-wrapper-two">
+          <h1 class="heading">Innovative Data Solutions for Tomorrow’s Challenges</h1>
+          <div class="div-block">
+            <a href="#services" class="button-primary w-button">Read More</a>
+            <a href="mailto:thirteentech.business@gmail.com?subject=Request%20for%20IT%20Services%20%E2%80%93%20ThirteenTech" class="button-primary outlined w-button">Contact Us</a>
+          </div>
+          <img src="images/undraw_maintenance_re_59vn-20-1-.svg" loading="lazy" width="245" alt="" class="image" />
+        </div>
+      </div>
+    </section>
+    <section id="services" data-w-id="c06a104d-0751-1e1c-dc45-d896df5827f2" style="opacity:0" class="features-list">
+      <div class="container-2">
+        <div class="features-wrapper-two">
+          <div class="features-left">
+            <img src="images/undraw_services_re_hu5n.svg" loading="lazy" alt="" />
+          </div>
+          <div class="features-right">
+            <h3 class="heading-2">Our services make the difference</h3>
+            <ul role="list" class="list w-list-unstyled">
+              <li class="features-block-two">
+                <img src="images/connection.webp" loading="lazy" width="128" alt="" class="testimonial-image services" />
+                <div class="div-block-8">
+                  <h1 class="mon-med-20">Data engineering</h1>
+                  <p class="lato-l-10">We design and build scalable data pipelines to efficiently gather, process, and transform raw data into valuable insights.</p>
+                </div>
+              </li>
+              <li class="features-block-two">
+                <img src="images/cloud-application.webp" loading="lazy" width="64" alt="" class="testimonial-image services nomargin" />
+                <div class="div-block-9">
+                  <h1 class="mon-med-20">Cloud architecture</h1>
+                  <p class="lato-l-10">We design and implement flexible, cost-effective cloud infrastructures that support scalability and innovation.</p>
+                </div>
+              </li>
+              <li class="features-block-two">
+                <img src="images/folder.webp" loading="lazy" alt="" class="testimonial-image services nomargin" />
+                <div class="div-block-10">
+                  <h1 class="mon-med-20">Database administration</h1>
+                  <p class="lato-l-10">We ensure your databases are secure, optimized, and maintained for high availability and performance.</p>
+                </div>
+              </li>
+              <li class="features-block-two">
+                <img src="images/settings.webp" loading="lazy" alt="" class="testimonial-image services nomargin" />
+                <div class="div-block-7">
+                  <h1 class="mon-med-20">DevOps</h1>
+                  <p class="lato-l-10">We streamline development and operations through automation, continuous integration, and deployment for faster, reliable delivery.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="process" data-w-id="e170a871-9b1d-eaa5-c3f6-c026d544104a" style="opacity:0" class="testimonial-column-light">
+      <div class="container-2">
+        <div class="div-block-2">
+          <h2 class="heading-2 nop">Take Your Business to the Next Level</h2>
+          <div class="lato-l-10 right">At ThirteenTech, we&#x27;re dedicated to driving results and helping businesses succeed. Here&#x27;s how we can get started together:</div>
+        </div>
+        <div class="testimonial-grid-two">
+          <div id="w-node-e170a871-9b1d-eaa5-c3f6-c026d544104f-c7de4abb" class="testimonial-card-two">
+            <div class="div-block-3">
+              <img src="images/brainstorming.webp" loading="lazy" width="50" alt="" class="testimonial-image nomargin" />
+              <h3 class="mon-med-20">Schedule a Consultation</h3>
+              <p class="lato-l-10 center">Connect with us to discuss your business objectives, challenges, and goals. We’ll walk you through how we can help elevate your business to the next level. Schedule your first call today and take the first step toward success.</p>
+            </div>
+          </div>
+          <div id="w-node-e11b8ab2-ee5c-3ea2-6f20-66630be1d87b-c7de4abb" class="testimonial-card-two">
+            <div class="div-block-4">
+              <img src="images/analysis.webp" loading="lazy" alt="" class="testimonial-image nomargin" />
+              <h3 class="mon-med-20">Develop a Customized Plan</h3>
+              <p class="lato-l-10 center">Based on your specific needs, we&#x27;ll craft a personalized strategy tailored to your business. Our expert team will collaborate with you every step of the way to ensure a clear and effective roadmap for growth.</p>
+            </div>
+          </div>
+          <div id="w-node-e28636e3-fc16-e2d4-1dff-570f417fde02-c7de4abb" class="testimonial-card-two">
+            <img src="images/graph.webp" loading="lazy" alt="" class="testimonial-image nomargin" />
+            <h3 class="mon-med-20">Launch and Grow</h3>
+            <p class="lato-l-10 center">Once the plan is set, we’ll put it into action. From implementation to continuous support, <br />we’ll ensure your business is on the path to success, adjusting as needed to meet your evolving goals. </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="technologies" data-w-id="9d3ceac9-467d-33c4-fa65-275c04210fb2" style="opacity:0" class="logos-title-large">
+      <div class="container-2">
+        <h2 class="heading-2 nop center">Our Toolbox of Cutting-Edge Technologies</h2>
+        <div class="clients-wrapper">
+          <img src="images/python-20-1-.png" loading="lazy" width="70" alt="Arise Health logo" class="techimage" />
+          <img src="images/awslogo.webp" loading="lazy" width="110" sizes="(max-width: 479px) 53vw, 110px" alt="The Paak logo" class="techimage" />
+          <img src="images/databricks.webp" loading="lazy" width="83" alt="OE logo" class="techimage" />
+          <img src="images/snowflake.webp" loading="lazy" width="80" sizes="(max-width: 479px) 53vw, 80px" alt="2020INC logo"  class="techimage" />
+        </div>
+      </div>
+    </section>
+    <section id="about_us" class="hero-heading-right">
+      <div class="container-2">
+        <div class="hero-wrapper">
+          <div data-w-id="c8ec994c-4568-e4e0-1f42-1146ce704739" style="opacity:0" class="hero-split">
+            <h1 class="heading-2">Our Story</h1>
+            <p class="lato-l-10">Founded in 2023 in Rijeka, Croatia, ThirteenTech specializes in turning raw data into actionable insights. Led by Nikola Samardzic, our team leverages years of experience to help businesses make smarter decisions and drive growth. We are committed to delivering innovative solutions that empower companies to thrive in a data-driven world.</p>
+          </div>
+          <div class="hero-split">
+            <img src="images/undraw_team_collaboration_re_ow29.svg" loading="lazy" style="opacity:0" data-w-id="c8ec994c-4568-e4e0-1f42-1146ce704738" alt="" class="shadow-two" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="clients" data-w-id="e6c34285-d096-ded3-7f04-58eaa9fe5a4e" style="opacity:0" class="logos-title-large">
+      <div class="container-2">
+        <h2 class="heading-2 nop center">Proudly Collaborating With</h2>
+        <div class="clients-wrapper clients">
+          <a href="https://www.aviv-group.com/" target="_blank" class="div-block-5 w-inline-block">
+            <img src="images/aviv-201.png" loading="lazy" alt="" />
+            <h1 class="lato-l-10 client">Aviv-Group</h1>
+          </a>
+        </div>
+      </div>
+    </section>
+    <section class="hero-heading-left">
+      <div class="div-block-6">
+        <div class="hero-split wwu">
+          <h1 class="heading-2 nop">Work With Us</h1>
+          <p class="lato-l-10 center">Ready to elevate your data strategy? <br />Connect with us to start transforming your insights into success. </p>
+          <a href="mailto:thirteentech.business@gmail.com?subject=Request%20for%20IT%20Services%20%E2%80%93%20ThirteenTech" class="button-primary w-button">Contact Us</a>
+        </div>
+      </div>
+    </section>
+    <section class="footer-subscribe">
+      <div class="container-2">
+        <div class="footer-wrapper-three">
+          <div class="footer-legal-block">
+            <img src="images/thirteentech-201.png" loading="lazy" alt="" />
+          </div>
+          <div class="footer-social-block-three">
+            <a href="https://www.linkedin.com/company/thirteentech13" target="_blank" class="footer-social-link-three w-inline-block">
+              <img src="images/linkedin.png" loading="lazy" alt="" class="image-2" />
+            </a>
+            <a href="mailto:thirteentech.business@gmail.com?subject=Request%20for%20IT%20Services%20%E2%80%93%20ThirteenTech" class="footer-social-link-three w-inline-block">
+              <img src="images/mail.png" loading="lazy" alt="" class="image-3" />
+            </a>
+            <a href="tel:+385958532283" class="footer-social-link-three w-inline-block">
+              <img src="images/phone-call-20-1-.png" loading="lazy" alt="" class="image-4" />
+            </a>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="footer-block-three">
+            <a href="#about_us" class="footer-link-three">About Us</a>
+            <a href="#services" class="footer-link-three">Services</a>
+            <a href="#process" class="footer-link-three">Process</a>
+            <a href="#technologies" class="footer-link-three">Technologies</a>
+            
+           
+          </div>
+          <div class="footer-copyright">© 2024 ThirteenTech. All rights reserved</div>
+        </div>
+      </div>
+    </section>
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
+  </body>
 </html>
