logo-fix: uploaded png logo and renaming

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <div class="container-regular">
           <div class="navbar-wrapper">
             <a href="#" class="navbar-brand w-nav-brand">
-              <img src="images/thirteentech-201.png" loading="lazy" width="59" alt="" />
+              <img src="images/tt-logo-transparent.png" loading="lazy" width="60" alt="" />
             </a>
             <nav role="navigation" class="nav-menu-wrapper w-nav-menu">
               <ul role="list" class="nav-menu-2 w-list-unstyled">
@@ -69,7 +69,7 @@
             <a href="#services" class="button-primary w-button">Read More</a>
             <a href="mailto:thirteentech.business@gmail.com?subject=Request%20for%20IT%20Services%20%E2%80%93%20ThirteenTech" class="button-primary outlined w-button">Contact Us</a>
           </div>
-          <img src="images/undraw_maintenance_re_59vn-20-1-.svg" loading="lazy" width="245" alt="" class="image" />
+          <img src="images/maintence.svg" loading="lazy" width="245" alt="" class="image" />
         </div>
       </div>
     </section>
@@ -77,7 +77,7 @@
       <div class="container-2">
         <div class="features-wrapper-two">
           <div class="features-left">
-            <img src="images/undraw_services_re_hu5n.svg" loading="lazy" alt="" />
+            <img src="images/services.svg" loading="lazy" alt="" />
           </div>
           <div class="features-right">
             <h3 class="heading-2">Our services make the difference</h3>
@@ -148,7 +148,7 @@
       <div class="container-2">
         <h2 class="heading-2 nop center">Our Toolbox of Cutting-Edge Technologies</h2>
         <div class="clients-wrapper">
-          <img src="images/python-20-1-.png" loading="lazy" width="70" alt="Arise Health logo" class="techimage" />
+          <img src="images/python.png" loading="lazy" width="70" alt="Arise Health logo" class="techimage" />
           <img src="images/awslogo.webp" loading="lazy" width="110" sizes="(max-width: 479px) 53vw, 110px" alt="The Paak logo" class="techimage" />
           <img src="images/databricks.webp" loading="lazy" width="83" alt="OE logo" class="techimage" />
           <img src="images/snowflake.webp" loading="lazy" width="80" sizes="(max-width: 479px) 53vw, 80px" alt="2020INC logo"  class="techimage" />
@@ -163,7 +163,7 @@
             <p class="lato-l-10">Founded in 2023 in Rijeka, Croatia, ThirteenTech specializes in turning raw data into actionable insights. Led by Nikola Samardzic, our team leverages years of experience to help businesses make smarter decisions and drive growth. We are committed to delivering innovative solutions that empower companies to thrive in a data-driven world.</p>
           </div>
           <div class="hero-split">
-            <img src="images/undraw_team_collaboration_re_ow29.svg" loading="lazy" style="opacity:0" data-w-id="c8ec994c-4568-e4e0-1f42-1146ce704738" alt="" class="shadow-two" />
+            <img src="images/collaboration.svg" loading="lazy" style="opacity:0" data-w-id="c8ec994c-4568-e4e0-1f42-1146ce704738" alt="" class="shadow-two" />
           </div>
         </div>
       </div>
@@ -192,7 +192,7 @@
       <div class="container-2">
         <div class="footer-wrapper-three">
           <div class="footer-legal-block">
-            <img src="images/thirteentech-201.png" loading="lazy" alt="" />
+            <img src="images/tt-logo-transparent.png" width="55" loading="lazy" alt="" />
           </div>
           <div class="footer-social-block-three">
             <a href="https://www.linkedin.com/company/thirteentech13" target="_blank" class="footer-social-link-three w-inline-block">
@@ -202,7 +202,7 @@
               <img src="images/mail.png" loading="lazy" alt="" class="image-3" />
             </a>
             <a href="tel:+385958532283" class="footer-social-link-three w-inline-block">
-              <img src="images/phone-call-20-1-.png" loading="lazy" alt="" class="image-4" />
+              <img src="images/phone-call.png" loading="lazy" alt="" class="image-4" />
             </a>
           </div>
         </div>
