--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>ThirteenTech</title>
+    <meta name="description" content="ThirteenTech website">
+    <meta name="keywords" content="HTML,CSS,JavaScript, ThirteenTech, Data, Data Engineering, Database, Consultant, Rijeka, Croatia, AWS, Python">
+    <meta name="author" content="ThirteenTech">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
